{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 57,
  "lineage": "6bb36764-e3d1-f4ce-34d0-832c0d461739",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project_one_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0984f4b9e98be44bf",
            "arn": "arn:aws:ec2:us-east-1:010526250076:instance/i-07b3cc5ad0fb53ecd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b3cc5ad0fb53ecd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stg_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-047401bd1abd67afb",
            "private_dns": "ip-10-0-20-147.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.147",
            "public_ip": "34.229.39.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0adde81a1f1e10818",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d46d7b8e301becd",
            "tags": {
              "Name": "stg_nginx_web_server"
            },
            "tags_all": {
              "Name": "stg_nginx_web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dd51f13f361510c9"
            ]
          },
          "dependencies": [
            "aws_key_pair.project_one_key_pair",
            "aws_security_group.project_one_sg",
            "aws_subnet.project_one_subnet_1",
            "aws_vpc.project_one_vpc",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_one_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:internet-gateway/igw-0de3b9b47385cd70d",
            "id": "igw-0de3b9b47385cd70d",
            "owner_id": "010526250076",
            "tags": {
              "Name": "stg_igw"
            },
            "tags_all": {
              "Name": "stg_igw"
            },
            "vpc_id": "vpc-021e8de17dba52ad0"
          },
          "dependencies": [
            "aws_vpc.project_one_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_one_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:route-table/rtb-033a3b210ee1b5e68",
            "id": "rtb-033a3b210ee1b5e68",
            "owner_id": "010526250076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0de3b9b47385cd70d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stg_rtb"
            },
            "tags_all": {
              "Name": "stg_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-021e8de17dba52ad0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project_one_igw",
            "aws_vpc.project_one_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project-one-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3aedc0cb4144d64",
            "route_table_id": "rtb-033a3b210ee1b5e68",
            "subnet_id": "subnet-03d46d7b8e301becd"
          },
          "dependencies": [
            "aws_internet_gateway.project_one_igw",
            "aws_route_table.project_one_route_table",
            "aws_subnet.project_one_subnet_1",
            "aws_vpc.project_one_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_one_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:security-group/sg-0dd51f13f361510c9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd51f13f361510c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "102.89.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stg_sec_grp",
            "name_prefix": "",
            "owner_id": "010526250076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stg_sg"
            },
            "tags_all": {
              "Name": "stg_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-021e8de17dba52ad0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_one_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_one_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:subnet/subnet-03d46d7b8e301becd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d46d7b8e301becd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010526250076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stg_subnet_1"
            },
            "tags_all": {
              "Name": "stg_subnet_1"
            },
            "vpc_id": "vpc-021e8de17dba52ad0"
          },
          "dependencies": [
            "aws_vpc.project_one_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_one_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010526250076:vpc/vpc-021e8de17dba52ad0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dca2d9b4f8b0c6d9",
            "default_route_table_id": "rtb-04c95b3b5e260a547",
            "default_security_group_id": "sg-0b52062d287f0ef2a",
            "dhcp_options_id": "dopt-0cfcaef1f2a31881c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021e8de17dba52ad0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c95b3b5e260a547",
            "owner_id": "010526250076",
            "tags": {
              "Name": "stg_vpc"
            },
            "tags_all": {
              "Name": "stg_vpc"
            }
          }
        }
      ]
    }
  ]
}